MacViews: Fix window dragging on Sierra.

To allow window dragging on custom window regions on MacViews, an event monitor
is currently used. The event monitor looks for any mouse down events which
should cause window dragging, makes the window draggable and then reposts these
events. Since AppKit caches the draggable regions, we use a hack to invalidate
this cache in BridgedNativeWidget::SetDraggable. However, this broke on Sierra.

To fix, use the new window dragging API [NSWindow performWindowDragWithEvent:]
introduced in Mac OS 10.11. BridgedNativeWidget::ShouldUseDragEventMonitor is
introduced which returns true if the drag event monitor approach should be used
when the API is not available. NativeWidgetMacNSWindow's sendEvent is modified
to intercept mouse events and perform window dragging when necessary.

Also, BridgedNativeWidgetUITest.HitTest is fixed for both the cases (when a drag
event monitor is used and when it isn't).

BUG=660270
TEST=On Sierra, enable chrome://flags/#mac-views-native-app-windows. Install
https://chrome.google.com/webstore/detail/frameless-window-sample/hjjdaddngnaofnfjpajdcbdmkegiakec/.
Add a titlebar (draggable region) and ensure window dragging works.
TEST=Build with mac_views_browser=true on Sierra. Ensure the browser window is
draggable.

Review-Url: https://codereview.chromium.org/2475173002
Cr-Commit-Position: refs/heads/master@{#431166}

Former-commit-id: d22dbe7d44e81b40c2c1415a13ff7965693150ed