ui/views/cocoa/views_nswindow_delegate.mm
@@ -50,10 +50,6 @@
   parent_->OnWindowWillClose();
 }
 
-- (BOOL)shouldRepostPendingLeftMouseDown:(NSPoint)locationInWindow {
-  return parent_->ShouldRepostPendingLeftMouseDown(locationInWindow);
-}
-
 // NSWindowDelegate implementation.
 
 - (void)windowDidFailToEnterFullScreen:(NSWindow*)window {
